// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Text Set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 duXuoY"
    >
      <p
        class="sc-AxhCb fTtmG"
        color="currentColor"
        disabled=""
        font-size="16px"
      >
        Disabled text
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 fXRdUR"
    >
      <p
        class="sc-AxhCb kNjXdR"
        color="white"
        disabled=""
        font-size="16px"
      >
        Disabled text
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 ffhBHW"
    >
      <p
        class="sc-AxhCb kNjXdR"
        color="white"
        disabled=""
        font-size="16px"
      >
        Disabled text
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Text Set to inline 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <span
      class="sc-AxhCb czaJmK"
      color="currentColor"
      font-size="16px"
    >
      Inline text
    </span>
    <span
      class="sc-AxhCb hpmHVQ"
      color="currentColor"
      font-size="16px"
    >
      Inline text
    </span>
  </div>
</div>
`;

exports[`Storyshots Text Text 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <p
      class="sc-AxhCb hpmHVQ"
      color="currentColor"
      font-size="16px"
    >
      Default text
    </p>
  </div>
</div>
`;

exports[`Storyshots Text With a color 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <p
      class="sc-AxhCb kVUoJL"
      color="blue"
      font-size="16px"
    >
      Blue text
    </p>
  </div>
</div>
`;

exports[`Storyshots Text With a custom margin 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <p
      class="sc-AxhCb gznDoW"
      color="currentColor"
      font-size="16px"
    >
      Text 24px bottom margin.
    </p>
    <p
      class="sc-AxhCb hpmHVQ"
      color="currentColor"
      font-size="16px"
    >
      Text with default (0px) bottom margin.
    </p>
  </div>
</div>
`;

exports[`Storyshots Text With a size 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 eBHmui"
    >
      <p
        class="sc-AxhCb hpmHVQ"
        color="currentColor"
        font-size="16px"
      >
        Default (16px/24px)
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 eBHmui"
    >
      <p
        class="sc-AxhCb iuDmhU"
        color="currentColor"
        font-size="small"
      >
        Small (14px/24px)
      </p>
      <p
        class="sc-AxhCb iduuMb"
        color="currentColor"
        font-size="small"
      >
        Small Compressed (14px/16px)
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 eBHmui"
    >
      <p
        class="sc-AxhCb fTcPjZ"
        color="currentColor"
        font-size="smaller"
      >
        Smaller (12px/16px)
      </p>
    </div>
  </div>
</div>
`;
